--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 <body>
 
    
-   <img className="milei" src="./Images/milei.jpg" />
+   <img class="milei" src="./Images/milei.jpg" />
 
    <h1>Members</h1>
    <ol>
