Agregamos un text

--- a/main.html
+++ b/main.html
@@ -6,10 +6,10 @@
    <title>Proyect</title>
 </head>
 <body>
+   <p>Lorem ipsum </p>
 
    
    <img class="milei" src="./Images/milei.jpg" />
-
    <h1>Members</h1>
    <ol>
       <li>Damián Fricks</li>
